style page title added and radius changed

--- a/style.html
+++ b/style.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+	<title>first upload</title>
 <head>
 	<style>
 		.page {
@@ -9,6 +10,11 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
+			margin:50px;
+			padding:30px;
+			border:20px solid rgb(5, 85, 204);
+			border-radius: 25%;
+     
 		}
 
 		.inner-area {
